name:                reactive-banana-sdl2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/edeijl/reactive-banana-sdl2#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Deijl
maintainer:          erik.deijl@gmail.com
copyright:           MIT
category:            FRP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reactive.Banana.SDL2
                     , Reactive.Banana.SDL2.Types
                     , Reactive.Banana.SDL2.Util
  build-depends:       base >= 4.7 && < 5
                     , reactive-banana >= 1.1.0 && < 1.2.0
                     , sdl2 >= 2.1.0  && < 2.2.0
  default-language:    Haskell2010


test-suite reactive-banana-sdl2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reactive-banana-sdl2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/edeijl/reactive-banana-sdl2
